test/ui/tests/lowering/undefined-attributes.stderr
error[E011]: the attribute `one-can-only-dream` is not defined
 --> ${TEST_FOLDER}/lowering/undefined-attributes.lushui:3:2
  |
3 | @one-can-only-dream
  |  ^^^^^^^^^^^^^^^^^^
  |

error[E011]: the attribute `eliminate` is not defined
 --> ${TEST_FOLDER}/lowering/undefined-attributes.lushui:6:9
  |
6 |     T: @eliminate Type = @(elaborated attempt) 0
  |         ^^^^^^^^^
  |

error[E011]: the attribute `elaborated` is not defined
 --> ${TEST_FOLDER}/lowering/undefined-attributes.lushui:6:28
  |
6 |     T: @eliminate Type = @(elaborated attempt) 0
  |                            ^^^^^^^^^^
  |

error: aborting due to 3 previous errors

